<?xml version="1.0" encoding="utf-8"?>

<!-- TO MAKE ALL SCREEN SCROLLABLE -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <!--Bu xmlde tıklanınca açılacak oyun detayları-->
    <!-- fragmentının görüntüleri oluşturuluyor.-->

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailsFragment">

    <!-- BACK ARROW -->
    <TextView
        android:id="@+id/game_pg_button"
        android:layout_width="78dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
        android:text="@string/games"
        android:textAlignment="textStart"
        android:textAppearance="@style/top_detail"
        app:layout_constraintBottom_toTopOf="@+id/white_to_black_grad"
        app:layout_constraintEnd_toStartOf="@+id/fav"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- FAVOURİTES TEXT -->
    <TextView
        android:id="@+id/fav"
        android:layout_width="78dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"

        android:text="@string/favo"
        android:textAlignment="textEnd"
        android:textAppearance="@style/top_detail"
        app:layout_constraintBottom_toTopOf="@+id/white_to_black_grad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- GAME PİCTURE -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="326dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fav"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/a" />

    <!-- GRADIENT VIEW -->
    <View
        android:id="@+id/white_to_black_grad"
        android:layout_width="414dp"
        android:layout_height="326dp"
        android:background="@drawable/gradiant"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <!-- THE NAME OF THE GAME IN PICTURE AT BOTTOM-->
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:text="@string/grand_teft_auto_v"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <!-- GAME DESCRIPTION TITLE -->
    <TextView
        android:id="@+id/description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/game_description"
        android:textColor="#313131"
        android:textSize="22sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <!-- GAME DESCRIPTION TEXT -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:maxLines="4"
        android:text="@string/grand_text"
        android:textColor="#313131"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_title"
        app:layout_constraintVertical_bias="0.044" />

    <!-- READ MORE BUTTON -->
    <Button
        android:id="@+id/buttonReadMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Read More"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#2196F3"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <!-- VISIT REDDIT BUTTON-->
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:text="@string/visit_reddit"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#EB000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/buttonReadMore"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <!-- VISIT WEBSITE BUTTON-->
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:paddingStart="10dp"
        android:paddingTop="4dp"
        android:paddingEnd="10dp"
        android:text="@string/visit_website"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#EB000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>