<?xml version="1.0" encoding="utf-8"?>

<!--Bu xmlde tıklanınca açılacak oyun kartının-->
<!--görüntüleri oluşturuluyor.-->
<!--CardView kullanılıyor.-->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="416dp"
        android:layout_height="136dp"
        android:orientation="horizontal">

        <!-- GAME PİCTURE -->
        <ImageView
            android:id="@+id/game_png"
            android:layout_width="120dp"
            android:layout_height="104dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginEnd="3dp"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/game_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- GAMES TİTLE -->
        <TextView
            android:id="@+id/game_name"
            android:layout_width="207dp"
            android:layout_height="49dp"
            android:layout_margin="5dp"
            android:padding="0dp"
            android:text="@string/app_name"
            android:textAlignment="textStart"
            android:textAppearance="@style/title2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08"
            tools:ignore="RtlCompat" />

        <!-- GAMES RATE -->
        <TextView
            android:id="@+id/meta_critic"
            android:layout_width="46dp"
            android:layout_height="26dp"
            android:layout_marginStart="-30dp"
            android:text="@string/rate"
            android:textAppearance="@style/text_style_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="@+id/game_png"
            app:layout_constraintTop_toBottomOf="@+id/game_name"
            app:layout_constraintVertical_bias="0.2" />

        <!-- METACRİTİC TEXT -->
        <TextView
            android:id="@+id/metatric"
            android:layout_width="91dp"
            android:layout_height="22dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="-30dp"
            android:padding="0dp"
            android:text="@string/meta_critic_str"
            android:textAlignment="textStart"
            android:textAppearance="@style/text_style_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/meta_critic"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toEndOf="@id/game_png"
            app:layout_constraintTop_toBottomOf="@id/game_name"
            app:layout_constraintVertical_bias="0.13" />

        <!-- GAMES GENRE -->
        <TextView
            android:id="@+id/game_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_type_detail_str"
            android:textAlignment="textStart"
            android:textAppearance="@style/genre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toEndOf="@id/game_png"
            app:layout_constraintTop_toBottomOf="@id/metatric"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>